# markov_draftjs

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  example.py  generate.js  generate.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: ci.yml
markov_draftjs/: __init__.py  content.json  generate.js  index.js  index.test.js  markov_draftjs.d.ts
src/markov_draftjs/: __init__.py  generate.js  index.mjs  index.test.js
tests/: test_markov_draftjs.py
